[package]
edition = "2021"
name = "ashgrove"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
rand = "0.8"

[target.'cfg(target_family = "wasm")'.dependencies]
wee_alloc = "0.4"

[profile.release]
lto = "thin"
opt-level = 's'
